Separated home and not default image support
Also arkdep deploy logging

--- a/modules/partition.conf
+++ b/modules/partition.conf
@@ -267,7 +267,7 @@ defaultFileSystemType:  "btrfs"
 #                         different mountpoint. Defaults to false.
 directoryFilesystemRestrictions:
     - directory: "/"
-      allowedFilesystemTypes: ["btrfs"]
+      allowedFilesystemTypes: ["btrfs","luks2"]
 
 # The ClearMounts job unmounts / unmaps things before partitioning.
 # Some special entries under /dev/mapper are excepted from this process.
